--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <!-- link to custom stylesheet (always require after Bootstrap) -->
-    <link rel="stylesheet" href="/css/style.css" media="screen" title="no title" charset="utf-8">
-    <!-- jQuery from CDN -->
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
 
+    <!-- jQuery from CDN -->
+    <script
+        src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
 
     <!-- link to custom javascript file (always require after external JS libraries) -->
+    <script type="text/javascript" src="js/app.js"></script>
+
 
     <title>Tic Tac Toe</title>
   </head>
+
   <body>
     <div class="container">
       <div class="row text-center">
@@ -28,18 +35,30 @@
       </div>
       <div class="row">
 
-        <!-- a column represents our game board -->
-        <!-- the `offset` class helps us center the board -->
+        <!-- Master Column and Centering Board -->
         <div class="col-md-6 col-md-offset-3" id="board">
 
-          <!-- you can put rows inside of columns! -->
-          <!-- Bootstrap subdivides these 'nested' rows into 12 columns, too! -->
+
+          <!--Row 1-->
           <div class="row">
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
-            <div class="col-md-4 box">a</div>
+            <div class="col-md-4 box">1</div>
+            <div class="col-md-4 box">2</div>
+            <div class="col-md-4 box">3</div>
           </div>
 
+          <!--Row 2-->
+          <div class="row">
+            <div class="col-md-4 box">4</div>
+            <div class="col-md-4 box">5</div>
+            <div class="col-md-4 box">6</div>
+          </div>
+
+          <!--Row 3-->
+          <div class="row">
+            <div class="col-md-4 box">7</div>
+            <div class="col-md-4 box">8</div>
+            <div class="col-md-4 box">9</div>
+          </div>
 
 
         </div>
