--- a/index.html
+++ b/index.html
@@ -38,31 +38,34 @@
         <!-- Master Column and Centering Board -->
         <div class="col-md-6 col-md-offset-3" id="board">
 
-
           <!--Row 1-->
           <div class="row">
-            <div class="col-md-4 box">1</div>
-            <div class="col-md-4 box">2</div>
-            <div class="col-md-4 box">3</div>
+            <div class="col-md-4 box" id="b1">1</div>
+            <div class="col-md-4 box" id="b2">2</div>
+            <div class="col-md-4 box" id="b3">3</div>
           </div>
 
           <!--Row 2-->
           <div class="row">
-            <div class="col-md-4 box">4</div>
-            <div class="col-md-4 box">5</div>
-            <div class="col-md-4 box">6</div>
+            <div class="col-md-4 box" id="b4">4</div>
+            <div class="col-md-4 box" id="b5">5</div>
+            <div class="col-md-4 box" id="b6">6</div>
           </div>
 
           <!--Row 3-->
           <div class="row">
-            <div class="col-md-4 box">7</div>
-            <div class="col-md-4 box">8</div>
-            <div class="col-md-4 box">9</div>
+            <div class="col-md-4 box" id="b7">7</div>
+            <div class="col-md-4 box" id="b8">8</div>
+            <div class="col-md-4 box" id="b9">9</div>
           </div>
 
 
         </div>
+
+<!-- Button -->
       </div>
-    </div>
+        <div class="row" id="row4">
+          <button type="button" class="btn btn-primary btn-lg btn-block" id="resart">Reset</button>
+       </div>
   </body>
 </html>
