Created win array and data variables

--- a/index.html
+++ b/index.html
@@ -40,23 +40,23 @@
 
           <!--Row 1-->
           <div class="row">
-            <div class="col-md-4 box" id="b1">1</div>
-            <div class="col-md-4 box" id="b2">2</div>
-            <div class="col-md-4 box" id="b3">3</div>
+            <div class="col-md-4 box" id="p1">1</div>
+            <div class="col-md-4 box" id="p2">2</div>
+            <div class="col-md-4 box" id="p3">3</div>
           </div>
 
           <!--Row 2-->
           <div class="row">
-            <div class="col-md-4 box" id="b4">4</div>
-            <div class="col-md-4 box" id="b5">5</div>
-            <div class="col-md-4 box" id="b6">6</div>
+            <div class="col-md-4 box" id="p4">4</div>
+            <div class="col-md-4 box" id="p5">5</div>
+            <div class="col-md-4 box" id="p6">6</div>
           </div>
 
           <!--Row 3-->
           <div class="row">
-            <div class="col-md-4 box" id="b7">7</div>
-            <div class="col-md-4 box" id="b8">8</div>
-            <div class="col-md-4 box" id="b9">9</div>
+            <div class="col-md-4 box" id="p7">7</div>
+            <div class="col-md-4 box" id="p8">8</div>
+            <div class="col-md-4 box" id="p9">9</div>
           </div>
 
 
